# AudioSkid

.github/workflows/: Build.yml
AndroidClient/: build.gradle  settings.gradle
AndroidClient/app/: build.gradle
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidClient/app/src/main/java/com/skid/audio/: MainActivity.java
WindowsServer/: CMakeLists.txt  main.cpp
